<resources>
    <string name="app_name">Testing</string>
    <string name="home">Asosiy</string>
    <string name="otkazma">O\'tkazma</string>
    <string name="tolov">To\'lov</string>
    <string name="chat">Chat</string>
    <string name="menyu">Menyu</string>
    <string name="_12">12</string>
    <string name="_123321_4353">123321****4353</string>
    <string name="_123000">123000</string>
</resources>