<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_baseline_transform_24"
        android:title="@string/otkazma" />
    <item
        android:id="@+id/allDocumentFragment"
        android:icon="@drawable/ic_baseline_payment_24"
        android:title="@string/tolov" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_wechat_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/profileFragmet"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/menyu" />
</menu>